--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -93,4 +93,48 @@ body {
 
 
 
+/****************** Large devices only *****************/
+@media (min-width: 1200px) {
+}
+
+/****************** Medium devices only *****************/
+@media (min-width: 992px) and (max-width: 1199px) {
+
+	/* Header */
+	#logo-img {
+		background: url('../images/restaurant-logo_medium.png') no-repeat;
+		width: 100px;
+		height: 100px;
+		margin: 5px 5px 5px 0;
+	}
+
+	/* End header */
+
+}
+/****************** Small devices only *****************/
+@media (max-width: 768px) and (max-width: 991px) {
+
+}
+/****************** Extra small devices only *****************/
+@media (max-width: 767px) {
+	.navbar-brand {
+		padding-top: 10px;
+		height: 80px;
+	}
+
+	.navbar-brand h1 { /* Restaurant name */
+		padding-top: 10px;
+		font-size: 5vw;	/* 1vw = 1% of viewport width */
+	}
+
+	.navbar-brand p { /* Kosher cert */
+		font-size: .6em;
+		margin-top: 12px;
+	}
+
+	.navbar-brand p img { /* Star-K */
+		height: 20px;
+	}
+}
+
 
