Lecture 33b: fixing navbar layout, text and dropdown menus, part 2

--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -135,6 +135,15 @@ body {
 	.navbar-brand p img { /* Star-K */
 		height: 20px;
 	}
+
+	#collapsable-nav a {
+		font-size: 1.2em;
+	}
+
+	#collapsable-nav a span {
+		font-size: 1em;
+		margin-right: 5px;
+	}
 }
 
 
