--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -1,52 +1,11 @@
-body {
-  font-size: 16px;
-  color: #fff;
-  background-color: #61122f;
-  font-family: 'Oxygen', sans-serif;
+* {
+	box-sizing: margin-box;
+	margin: 0px;
+	padding: 0px;
 }
 
-#header-nav {
-	background-color: #f6b319;
-	border-radius: 0;
-	border: 0;
-}
-
-#logo-img {
-	background: url('../images/restaurant-logo_large.png') no-repeat;
-	width: 150px;
-	height: 150px;
-	margin: 10px 15px 10px 0;
-}
-
-.navbar-brand {
-	padding-top: 25px;
-}
-
-.navbar-brand h1 { /* Restaurant name */
-	font-family: 'Lora', serif;
-	color: #557c3e;
-	font-size: 1.5em;
-	text-transform: uppercase;
-	font-weight: bold;
-	text-shadow: 1px 1px 1px #222;
-	margin-top: 0;
-	margin-bottom: 0;
-	line-height: .75;
-}
-
-.navbar-brand a:hover, .navbar-brand a:focus {
-	text-decoration: none;
-}
-
-.navbar-brand p { /* Kosher cert */
-	color: #000;
-	text-transform: uppercase;
-	font-size: .7em;
-	margin-top: 15px;
-}
-
-.navbar-brand p span { /* Star-K */
-	vertical-align: middle;
+.navbar-header h1 {
+	float: left;
 }
 
 #nav-list {
@@ -58,92 +17,76 @@ body {
 	text-align: center;
 }
 
-#nav-list a:hover {
-	background: #E7E7E7;
-}
-
 #nav-list a span {
 	font-size: 1.8em;
 }
 
-
-#phone {
-	margin-top: 5px;
+h1 {
+	margin-bottom: 50px;
+}
+.title {
+	border: 1px solid black;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+.column {
+	float: left;
+	position: relative;
 }
 
-#phone a {
-	text-align: right;
-	padding-bottom: 0;
+.section {
+	border: 1px solid black;
+	width: 90%;
+	background-color: #AAAAAA;	
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+	padding: 30px 10px 10px 10px;
 }
 
-#phone div { /* We Deliver */
-	color: #557c3e;
-	text-align: right;
-	padding-right: 15px;
+#chicken_title {
+	background-color: #FF0000;
+}
+#beef_title {
+	background-color: #00FF00;
+}
+#sushi_title {
+	background-color: #0000FF;
 }
 
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-	border: 1px solid #61122f;	
-}
-
-.navbar-header button.navbar-toggle {
-	clear: both;
-	margin-top: -30px;
-}
-
-
-
-/****************** Large devices only *****************/
-@media (min-width: 1200px) {
-}
-
-/****************** Medium devices only *****************/
-@media (min-width: 992px) and (max-width: 1199px) {
-
-	/* Header */
-	#logo-img {
-		background: url('../images/restaurant-logo_medium.png') no-repeat;
-		width: 100px;
-		height: 100px;
-		margin: 5px 5px 5px 0;
+/* --------------------------------------------------
+-- Large devices: for example a laptop
+---------------------------------------------------*/
+@media (min-width: 992px) {
+	.column {
+		width: 33%;
 	}
 
-	/* End header */
-
 }
-/****************** Small devices only *****************/
-@media (max-width: 768px) and (max-width: 991px) {
+/* --------------------------------------------------
+-- Medium devices: for example a tablet
+---------------------------------------------------*/
+@media (min-width: 768px) and (max-width: 991px) {
+	#chicken, #beef {
+		width: 50%;
+	}
 
+	#sushi {
+		width: 100%;
+	}
+
+	#sushi > .section {
+		width: 95%;
+	}
 }
-/****************** Extra small devices only *****************/
+
+/* --------------------------------------------------
+-- Small devices: for example a mobile phone
+---------------------------------------------------*/
 @media (max-width: 767px) {
-	.navbar-brand {
-		padding-top: 10px;
-		height: 80px;
-	}
-
-	.navbar-brand h1 { /* Restaurant name */
-		padding-top: 10px;
-		font-size: 5vw;	/* 1vw = 1% of viewport width */
-	}
-
-	.navbar-brand p { /* Kosher cert */
-		font-size: .6em;
-		margin-top: 12px;
-	}
-
-	.navbar-brand p img { /* Star-K */
-		height: 20px;
-	}
-
-	#collapsable-nav a {
-		font-size: 1.2em;
-	}
-
-	#collapsable-nav a span {
-		font-size: 1em;
-		margin-right: 5px;
+	.column {
+		width: 100%;
 	}
 }
-
-
